# emoh_socket_client

./: .gitignore  CMakeLists.txt  Device.cpp  Device.h  MQTTConnection.cpp  MQTTConnection.h  MQTTException.cpp  MQTTException.h  README.md  Socket.cpp  Socket.h  Switch.cpp  Switch.h  defines.h  main.cpp
libs/mqtt/: CMakeLists.txt
libs/mqtt/include/: MQTTClient.h
libs/rcSwitch/: RCSwitch.h
